@@ -1,3 +1,6 @@
+Sep 20, 2019
+  added script check_for_cycles.sh
+
 Jul 1, 2019
   loader: fixed loading of term comments
     if a term comment contains new line, carriage return or tab character(s), they are replaced by a space character
